--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@anthropic-ai/sdk": "^0.32.0",
+    "@google/generative-ai": "^0.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "openai": "^4.78.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@prisma/client": "^7.2.0",
